2010-08-16  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	Backport from mainline:
	2010-08-09  Richard Guenther  <rguenther@suse.de>

	PR middle-end/44632
	* function.c (gimplify_parameters): Do not clear addressable
	bit of the original parameter.

2010-08-14  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	Revert:
	2010-08-08  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR boehm-gc/34544
	* gthr-posix.h (__gthread_start): Delete.
	(__gthread_active_init): Use pthread_default_stacksize_np instead of
	pthread_create to determine if hpux pthreads are active.
	* gthr-posix95.h (__gthread_start): Delete.
	(__gthread_active_init): Likewise use pthread_default_stacksize_np.

2010-08-12  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/45262
	* fold-const.c (make_range) <case NEGATE_EXPR>: Punt if
	-a overflows.  Normalize the range.

2010-08-10  Steve Ellcey  <sje@cup.hp.com>
	    Jakub Jelinek <jakub@redhat.com>

	Backport from mainline:
	PR middle-end/41551
	* function.c (instantiate_virtual_regs_in_insn): Copy to new reg
	before forcing mode.

2010-08-08  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	Backport from mainline.
	2010-07-17  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR target/44805
	* config/pa/pa.h (CONSTANT_ALIGNMENT): Align strings to BITS_PER_WORD
	on all targets.

2010-08-08  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/45109
	* tree-ssa-structalias.c (get_constraint_for_component_ref):
	Explicitly strip handled components and indirect references.

2010-08-08  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR boehm-gc/34544
	* gthr-posix.h (__gthread_start): Delete.
	(__gthread_active_init): Use pthread_default_stacksize_np instead of
	pthread_create to determine if hpux pthreads are active.
	* gthr-posix95.h (__gthread_start): Delete.
	(__gthread_active_init): Likewise use pthread_default_stacksize_np.

2010-08-06  Eric Botcazou  <ebotcazou@adacore.com>

	PR target/44942